# concierge

./: .gitlab-ci.yml  .gitmodules  README.md  platformio.ini
backend/concierge-rs/: .gitignore  Cargo.toml  README.md
backend/concierge-rs/src/: coenv.rs  coquery.rs  main.rs
sensors/welcomebeacon/src/: main.cpp
sensors/welcomebeacon/src/ble/: cowelcomebeacon.h  cowelcomebracon.cpp
sensors/welcomebeacon/src/core/: cologging.h
src/: main.cpp
src/ble/: cowelcomebeacon.h  cowelcomebracon.cpp
src/core/: cologging.cpp  cologging.h
